--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   <meta name="title" content="IIMADOU ">
   <meta name="description"
     content="this website is a portofolio of imad eddine aris a WEB DESIGNER, WEB DEVELOPER, API DEVELOPER, BACKEND DEVELOPER, FRONTEND DEVELOPER">
-  <meta name="keywords" content="WEB DESIGNER, WEB DEVELOPER, API DEVELOPER, BACKEND DEVELOPER, FRONTEND DEVELOPER">
+  <meta name="keywords" content="WEB DESIGNER, WEB DEVELOPER, API DEVELOPER, BACKEND DEVELOPER, FRONTEND DEVELOPER, website creator, creation de siteweb en algerie, web site creator in algeria">
   <meta name="robots" content="index, follow">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
   <meta name="revisit-after" content="1 days">
   <meta name="author" content="Imad Eddine Aris">
+  <meta name="google-site-verification" content="lQYAJsVnEP5FW80ZGC74-oeErH_bRmmfBaNcZCeZhbY" />
 
 
   <!-- Favicons -->
