--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <div class="row">
                     <div class="col-sm-6 col-md-5">
                       <div class="about-img">
-                        <img src="assets/img/im.jpg" class="img-fluid rounded b-shadow-a" alt="" style="height: 150px;">
+                        <img src="assets/img/im.jpg" class="img-fluid rounded b-shadow-a" alt="" style="height: 150px;" oncontextmenu="return false;">
                       </div>
                     </div>
                     <div class="col-sm-6 col-md-7">
@@ -175,7 +175,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-briefcase"></i></span>
+                <span class="ico-circle"><i class="bi bi-palette"></i></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Web Design</h2>
@@ -188,7 +188,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-card-checklist"></i></span>
+                <span class="ico-circle"><i class="bi bi-code-slash"></i></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Web Development</h2>
@@ -201,7 +201,7 @@
           <div class="col-md-4">
             <div class="service-box">
               <div class="service-ico">
-                <span class="ico-circle"><i class="bi bi-binoculars"></i></span>
+                <span class="ico-circle"><i class="bi bi-phone-flip"></i></span>
               </div>
               <div class="service-content">
                 <h2 class="s-title">Responsive Design</h2>
