--- a/index.html
+++ b/index.html
@@ -21,17 +21,15 @@
   <meta name="google-site-verification" content="lQYAJsVnEP5FW80ZGC74-oeErH_bRmmfBaNcZCeZhbY" />
 
 
-  <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
+
   <link href="assets/css/style.css" rel="stylesheet">
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 
@@ -39,7 +37,7 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
@@ -53,29 +51,28 @@
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav>
 
     </div>
-  </header><!-- End Header -->
+  </header>
 
-  <!-- ======= Hero Section ======= -->
   <div id="hero" class="hero route bg-image" style="background-image: url(assets/img/dev.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
       <div class="table-cell">
         <div class="container">
-          <!--<p class="display-6 color-d">Hello, world!</p>-->
+
           <h1 class="hero-title mb-4">I am Imad ED. Aris</h1>
           <p class="hero-subtitle"><span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
     </div>
-  </div><!-- End Hero Section -->
+  </div>
 
   <main id="main">
 
-    <!-- ======= About Section ======= -->
+
     <section id="about" class="about-mf sect-pt4 route">
       <div class="container">
         <div class="row">
@@ -153,9 +150,9 @@
           </div>
         </div>
       </div>
-    </section><!-- End About Section -->
+    </section>
 
-    <!-- ======= Services Section ======= -->
+
     <section id="services" class="services-mf pt-5 route">
       <div class="container">
         <div class="row">
@@ -226,9 +223,9 @@
           </div>
         </div>
       </div>
-    </section><!-- End Services Section -->
+    </section>
 
-    <!-- ======= Contact Section ======= -->
+
     <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route"
       style="background-image: url(assets/img/overlay-bg.jpg)">
       <div class="overlay-mf"></div>
@@ -270,11 +267,11 @@
           </div>
         </div>
       </div>
-    </section><!-- End Contact Section -->
+    </section>
 
-  </main><!-- End #main -->
+  </main>
 
-  <!-- ======= Footer ======= -->
+
   <footer>
     <div class="container">
       <div class="row">
@@ -288,13 +285,13 @@
         </div>
       </div>
     </div>
-  </footer><!-- End  Footer -->
+  </footer>
 
   <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
-  <!-- Vendor JS Files -->
+
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
@@ -302,14 +299,14 @@
   <script src="assets/vendor/typed.js/typed.umd.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
+
   <script src="assets/js/main.js"></script>
 
   <script>
     document.getElementById("contactForm").addEventListener("submit", function (event) {
-      event.preventDefault(); // Prevent default form submission
+      event.preventDefault();
 
-      // Get form data
+
       var formData = {
         name: document.getElementById("name").value,
         email: document.getElementById("email").value,
@@ -317,11 +314,10 @@
         message: document.getElementById("message").value
       };
 
-      // Send email using EmailJS
       emailjs.send("service_po7lyi9", "template_9rjkn74", formData)
         .then(function (response) {
           alert("Your message has been sent. Thank you!");
-          document.getElementById("contactForm").reset(); // Clear form
+          document.getElementById("contactForm").reset();
         }, function (error) {
           console.error("Error sending email:", error);
           alert("An error occurred while sending your message. Please try again later.");
