--- a/apps_softwares.html
+++ b/apps_softwares.html
@@ -4,23 +4,123 @@
   <meta charset="UTF-8">
   <title>Apps & Softwares</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Bootstrap CSS and any custom CSS -->
+  <!-- Bootstrap & Site CSS -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
+  <!-- Custom Styles for Apps & Softwares -->
+  <style>
+    .apps-section-title {
+      font-weight: 700;
+      font-size: 2.5rem;
+      margin-bottom: 2rem;
+      text-align: center;
+      color: #0078ff;
+    }
+    .app-card {
+      transition: transform 0.2s, box-shadow 0.2s;
+      cursor: pointer;
+      border: none;
+      border-radius: 1rem;
+      box-shadow: 0 4px 24px rgba(0,0,0,0.06);
+      overflow: hidden;
+      background: #fff;
+    }
+    .app-card:hover {
+      transform: translateY(-5px) scale(1.03);
+      box-shadow: 0 8px 32px rgba(0,120,255,0.13);
+    }
+    .app-card img {
+      object-fit: cover;
+      height: 210px;
+      width: 100%;
+    }
+    .app-card .card-title {
+      color: #0078ff;
+      font-weight: 600;
+      font-size: 1.3rem;
+      margin-bottom: .5rem;
+    }
+    .app-card .card-text {
+      color: #555;
+      font-size: 1rem;
+    }
+    /* Modal overlay styling */
+    #appModal {
+      display: none;
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.75);
+      z-index: 2000;
+      justify-content: center;
+      align-items: center;
+      animation: fadeIn 0.2s;
+    }
+    #appModal.active {
+      display: flex;
+    }
+    #appModal .glightbox-container {
+      background: #fff;
+      border-radius: 1rem;
+      padding: 2rem;
+      position: relative;
+      max-width: 700px;
+      width: 95%;
+      max-height: 90vh;
+      overflow-y: auto;
+      box-shadow: 0 8px 48px rgba(0,0,0,0.2);
+      animation: slideDown 0.2s;
+    }
+    #appModal .glightbox-close {
+      position: absolute;
+      top: 1rem;
+      right: 1.5rem;
+      font-size: 2rem;
+      border: none;
+      background: none;
+      color: #0078ff;
+      cursor: pointer;
+      z-index: 10;
+    }
+    #appGallery {
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-bottom: 1.5rem;
+    }
+    #appGallery img {
+      border-radius: 6px;
+      max-width: 170px;
+      max-height: 150px;
+      box-shadow: 0 2px 8px rgba(0,120,255,0.09);
+      cursor: pointer;
+      transition: box-shadow 0.2s;
+    }
+    #appGallery img:hover {
+      box-shadow: 0 4px 24px rgba(0,120,255,0.18);
+    }
+    @keyframes fadeIn { from { opacity: 0;} to { opacity: 1;} }
+    @keyframes slideDown { from { transform: translateY(-40px);} to { transform: translateY(0);} }
+    @media (max-width: 600px) {
+      .app-card img { height: 140px; }
+      #appModal .glightbox-container { padding: 1rem; }
+      #appGallery img { max-width: 90px; max-height: 70px; }
+    }
+  </style>
 </head>
 <body>
   <!-- Header (copy your header/navbar from index.html) -->
   <header>
-    <!-- ...navbar code here (same as index.html)... -->
+    <!-- Navbar code (copy from your main index.html) -->
   </header>
   <main class="container py-5">
-    <h1 class="mb-4 text-center">Apps & Softwares</h1>
+    <h1 class="apps-section-title">Apps & Softwares</h1>
     <div class="row" id="apps-list">
-      <!-- Example card, repeat for each app -->
+      <!-- Example app card (repeat for each app) -->
       <div class="col-md-4 mb-4">
         <div class="card app-card" data-app="app1">
-          <img src="assets/apps_softwares/app1-thumb.jpg" class="card-img-top" alt="App 1">
+          <img src="assets/apps_softwares/app1-thumb.jpg" alt="App 1">
           <div class="card-body">
             <h5 class="card-title">App 1 Name</h5>
             <p class="card-text">Short description of App 1.</p>
@@ -29,23 +129,20 @@
       </div>
       <!-- Add more cards as needed -->
     </div>
-    <!-- Overlay Modal for App Details -->
-    <div id="appModal" class="glightbox" style="display:none;">
+    <!-- Modal Overlay -->
+    <div id="appModal">
       <div class="glightbox-container">
         <button type="button" class="close glightbox-close" id="closeAppModal">&times;</button>
-        <div id="appGallery" class="glightbox-gallery mb-3">
-          <!-- Gallery images will be injected here -->
-        </div>
-        <h3 id="appModalTitle"></h3>
+        <div id="appGallery"></div>
+        <h3 id="appModalTitle" class="mt-3"></h3>
         <p id="appModalDescription"></p>
       </div>
     </div>
   </main>
   <!-- Scripts -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script>
-    // Define your apps data
+    // Apps data
     const appsData = {
       app1: {
         name: 'App 1 Name',
@@ -56,17 +153,14 @@
         brief: 'Short description of App 1.',
         extended: 'This is an extended description of App 1. Here you can give more details about the app, its features, etc.'
       },
-      // Add more app data objects as needed
-      // app2: {...}
+      // Add more app objects as needed
     };
-
-    // Card click event
+    // Modal logic
     document.querySelectorAll('.app-card').forEach(card => {
       card.addEventListener('click', function() {
         const appKey = this.getAttribute('data-app');
         const app = appsData[appKey];
         if (!app) return;
-        // Fill modal with app data
         document.getElementById('appModalTitle').innerText = app.name;
         document.getElementById('appModalDescription').innerText = app.extended;
         // Gallery
@@ -75,24 +169,20 @@
         app.images.forEach((src, idx) => {
           const img = document.createElement('img');
           img.src = src;
-          img.className = 'img-fluid mx-1';
-          img.style.maxHeight = '250px';
-          img.style.cursor = 'pointer';
-          img.onclick = () => {
-            // Open image in GLightbox or larger view if you want
-            window.open(src, '_blank');
-          };
+          img.alt = app.name + ' Screenshot ' + (idx+1);
+          img.onclick = () => window.open(src, '_blank');
           gallery.appendChild(img);
         });
-        // Show modal
-        document.getElementById('appModal').style.display = 'block';
+        document.getElementById('appModal').classList.add('active');
       });
     });
-
-    // Close modal
     document.getElementById('closeAppModal').onclick = function() {
-      document.getElementById('appModal').style.display = 'none';
+      document.getElementById('appModal').classList.remove('active');
     };
+    // Close modal on outside click
+    document.getElementById('appModal').addEventListener('click', function(e) {
+      if(e.target === this) this.classList.remove('active');
+    });
   </script>
 </body>
 </html>
