--- a/apps_softwares.html
+++ b/apps_softwares.html
@@ -120,10 +120,11 @@
       <!-- Example app card (repeat for each app) -->
       <div class="col-md-4 mb-4">
         <div class="card app-card" data-app="app1">
-          <img src="assets/apps_softwares/app1-thumb.jpg" alt="App 1">
+          <img src="assets/apps_softwares/archiver 1.jpg" alt="App 1">
           <div class="card-body">
-            <h5 class="card-title">App 1 Name</h5>
-            <p class="card-text">Short description of App 1.</p>
+            <h5 class="card-title">Archiver: Archive et Secritariat</h5>
+            <p class="card-text">Effortlessly organize, archive, and search your documents with advanced OCR support.  
+Your all-in-one solution for digital document management and retrieval.</p>
           </div>
         </div>
       </div>
@@ -145,13 +146,16 @@
     // Apps data
     const appsData = {
       app1: {
-        name: 'App 1 Name',
+        name: 'Archiver: Archive et Secritariat',
         images: [
-          'assets/apps_softwares/app1-1.jpg',
-          'assets/apps_softwares/app1-2.jpg'
+          'assets/apps_softwares/archiver 1.jpg',
+          'assets/apps_softwares/archiver 2.jpg',
+          'assets/apps_softwares/archiver 3.jpg',
+          'assets/apps_softwares/archiver 4.jpg',
+          'assets/apps_softwares/archiver 5.jpg',
         ],
-        brief: 'Short description of App 1.',
-        extended: 'This is an extended description of App 1. Here you can give more details about the app, its features, etc.'
+        brief: 'Effortlessly organize, archive, and search your documents with advanced OCR support.  Your all-in-one solution for digital document management and retrieval.',
+        extended: 'Archiver is a powerful Flutter-based application designed to help individuals and organizations digitize, organize, and manage their documents with ease. Whether you are dealing with scanned paperwork, multi-page documents, or need to search through large archives, Archiver streamlines the entire process.'
       },
       // Add more app objects as needed
     };
