--- a/apps_softwares.html
+++ b/apps_softwares.html
@@ -160,6 +160,15 @@ Empower your HR department with automation and insightful dashboards.</p>
           </div>
         </div>
       </div>
+      <div class="col-md-4 mb-4">
+        <div class="card app-card" data-app="app4">
+          <img src="assets/apps_softwares/des 1.jpg" alt="Coming Soon">
+          <div class="card-body">
+            <h5 class="card-title">Coming Soon</h5>
+            <p class="card-text">A new software is on the way! Stay tuned for more details and features.</p>
+          </div>
+        </div>
+      </div>
     </div>
     <div id="appModal">
       <div class="glightbox-container">
@@ -211,6 +220,16 @@ Empower your HR department with automation and insightful dashboards.</p>
         ],
         brief: 'Manage employee records, attendance, payroll, and HR analytics in one place. Empower your HR department with automation and insightful dashboards.',
         extended: 'Human Resources Manager is an all-in-one HR solution for modern organizations. Easily manage employee data, track attendance, automate payroll, and generate HR analytics. With support for multiple users and secure data handling, this software streamlines HR operations and empowers your team with actionable insights.'
+      },
+      app4: {
+        name: 'Coming Soon',
+        images: [
+          'assets/apps_softwares/des 1.jpg',
+          'assets/apps_softwares/des 2.jpg',
+          'assets/apps_softwares/des 3.jpg',
+        ],
+        brief: 'A new software is on the way! Stay tuned for more details and features.',
+        extended: 'We are working on an exciting new software. Check back soon for updates, screenshots, and feature announcements!'
       }
     };
     document.querySelectorAll('.app-card').forEach(card => {
