--- a/creative-landing.html
+++ b/creative-landing.html
@@ -569,7 +569,7 @@
   <section class="main-section">
     <div class="main-left">
       <h1>Empowering Your Digital Future</h1>
-      <p>We deliver innovative technology solutions tailored to your business needs. From web development to cloud integration, our team leverages the latest technologies to drive your success. Discover how we can transform your vision into reality.</p>
+      <p>We deliver cutting-edge robotics solutions tailored to your industry’s unique needs. From autonomous systems to smart automation, our team harnesses the latest in robotics and AI technology to optimize performance and drive innovation. Discover how we can engineer your vision into a smarter, more efficient reality.</p>
       <div class="btn-group">
         <button class="btn quote">Get a Quote</button>
         <button class="btn learn">Learn More</button>
